fix main spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,7 +33,7 @@
 }
 .main {
   min-height: 100vh;
-  padding: 2rem 0;
+  padding: 0 0 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
